force-app/main/default/objects/FS_Flavor_Change_Head__c/FS_Flavor_Change_Head__c.object-meta.xml
<CustomObject>
    <label>Flavor Change Header</label>
    <nameField>
        <displayFormat>FCP-{0000}</displayFormat>
        <label>Flavor Change Header Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Flavor Change</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>