force-app/main/default/objects/FS_Flavor_Change_Head__c/fields/Activation_Lead__c.field-meta.xml
<CustomField>
    <fullName>Activation_Lead__c</fullName>
    <description>To retrieve Activation Lead from the corresponding Outlet</description>
    <formula>FS_HQ_Chain__r.FS_Outlet_Activation_Lead__c</formula>
    <label>Activation Lead</label>
    <type>Text</type>
</CustomField>