force-app/main/default/objects/FS_Flavor_Change_Head__c/fields/AutorabitExtId_del__c.field-meta.xml
<CustomField>
    <fullName>AutorabitExtId_del__c</fullName>
    <label>AutorabitExtId_del</label>
    <length>18</length>
    <type>Text</type>
</CustomField>