force-app/main/default/objects/FS_Flavor_Change_Head__c/fields/Calculated_Customer_Classficiation__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Customer_Classficiation__c</fullName>
    <formula>FS_HQ_Chain__r.Calculated_Customer_Classification__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calculated Customer Classficiation</label>
    <type>Text</type>
</CustomField>