force-app/main/default/objects/FS_Flavor_Change_Head__c/fields/Copy_of_ADD_flavor_Change__c.field-meta.xml
<CustomField>
    <fullName>Copy_of_ADD_flavor_Change__c</fullName>
    <label>Copy of ADD flavor change</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>