force-app/main/default/objects/FS_Flavor_Change_Head__c/fields/Entity_Distributor_Name__c.field-meta.xml
<CustomField>
    <fullName>Entity_Distributor_Name__c</fullName>
    <formula>FS_HQ_Chain__r.FS_Distributor__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Entity Distributor Name</label>
    <type>Text</type>
</CustomField>