force-app/main/default/objects/FS_Flavor_Change_Head__c/fields/FS_AC__c.field-meta.xml
<CustomField>
    <fullName>FS_AC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AC/PC</label>
    <lookupFilter>
        <active>false</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>FS AC_P</value>
        </filterItems>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>FS PIC_P</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Flavor_Change1</relationshipName>
    <type>Lookup</type>
</CustomField>