force-app/main/default/objects/FS_Flavor_Change_Head__c/fields/FS_AC_Mail_ID__c.field-meta.xml
<CustomField>
    <fullName>FS_AC_Mail_ID__c</fullName>
    <formula>FS_AC__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AC/PC Mail ID</label>
    <type>Text</type>
</CustomField>