force-app/main/default/objects/FS_Flavor_Change_Head__c/fields/FS_Add_New_NDO_Notes_Comments__c.field-meta.xml
<CustomField>
    <fullName>FS_Add_New_NDO_Notes_Comments__c</fullName>
    <label>Add New NDO Notes/Comments</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>