force-app/main/default/objects/FS_Flavor_Change_Head__c/fields/FS_Approved__c.field-meta.xml
<CustomField>
    <fullName>FS_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirmed Commercially Approved ?</label>
    <type>Checkbox</type>
</CustomField>