force-app/main/default/objects/FS_Flavor_Change_Head__c/fields/FS_Cartridge_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>FS_Cartridge_Payment_Method__c</fullName>
    <formula>IF( RecordType.DeveloperName == &#39;FS_Flavor_Change_Installation&#39;, TEXT(FS_installation__r.FS_Outlet__r.Cokesmart_Payment_Method__c), TEXT( FS_HQ_Chain__r.Cokesmart_Payment_Method__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cartridge Payment Method</label>
    <type>Text</type>
</CustomField>