force-app/main/default/objects/FS_Flavor_Change_Head__c/fields/FS_CDM_Setup_Complete__c.field-meta.xml
<CustomField>
    <fullName>FS_CDM_Setup_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CDM Setup Complete</label>
    <type>Checkbox</type>
</CustomField>