force-app/main/default/objects/FS_Flavor_Change_Head__c/fields/FS_CDM_Setup_Complete_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>FS_CDM_Setup_Complete_Date_Time__c</fullName>
    <label>CDM Setup Complete Date and Time</label>
    <type>DateTime</type>
</CustomField>