force-app/main/default/objects/FS_Flavor_Change_Head__c/fields/FS_CDM_Setup_Completed_by__c.field-meta.xml
<CustomField>
    <fullName>FS_CDM_Setup_Completed_by__c</fullName>
    <label>CDM Setup Completed By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>