force-app/main/default/objects/FS_Flavor_Change_Head__c/fields/FS_Comments__c.field-meta.xml
<CustomField>
    <fullName>FS_Comments__c</fullName>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>