force-app/main/default/objects/FS_Flavor_Change_Head__c/fields/FS_Commercially_Approved_By__c.field-meta.xml
<CustomField>
    <fullName>FS_Commercially_Approved_By__c</fullName>
    <description>Commercially Approved By  user</description>
    <label>Commercially Approved By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>