force-app/main/default/objects/FS_Flavor_Change_Head__c/fields/FS_Customer_Note__c.field-meta.xml
<CustomField>
    <fullName>FS_Customer_Note__c</fullName>
    <label>Customer Support Notes</label>
    <type>TextArea</type>
</CustomField>