force-app/main/default/objects/FS_Flavor_Change_Head__c/fields/FS_Customer_Readiness__c.field-meta.xml
<CustomField>
    <fullName>FS_Customer_Readiness__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Customer Readiness</description>
    <label>Customer Readiness</label>
    <type>Checkbox</type>
</CustomField>