force-app/main/default/objects/FS_Flavor_Change_Head__c/fields/FS_Customer_Readiness_Completed_By__c.field-meta.xml
<CustomField>
    <fullName>FS_Customer_Readiness_Completed_By__c</fullName>
    <label>Customer Readiness Completed By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>