force-app/main/default/objects/FS_Flavor_Change_Head__c/fields/FS_Customer_Readiness_Completed_DateTime__c.field-meta.xml
<CustomField>
    <fullName>FS_Customer_Readiness_Completed_DateTime__c</fullName>
    <description>Customer Readiness Completed DateTime</description>
    <label>Customer Readiness Completed DateTime</label>
    <type>DateTime</type>
</CustomField>