force-app/main/default/objects/FS_Flavor_Change_Head__c/fields/FS_Date_product_is_available_at_DC__c.field-meta.xml
<CustomField>
    <fullName>FS_Date_product_is_available_at_DC__c</fullName>
    <label>Date product is available at DC</label>
    <type>Date</type>
</CustomField>