force-app/main/default/objects/FS_Flavor_Change_Head__c/fields/FS_Delivery_method__c.field-meta.xml
<CustomField>
    <fullName>FS_Delivery_method__c</fullName>
    <formula>FS_HQ_Chain__r.FS_Final_Delivery_Method__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery method</label>
    <type>Text</type>
</CustomField>