force-app/main/default/objects/FS_Flavor_Change_Head__c/fields/FS_Description__c.field-meta.xml
<CustomField>
    <fullName>FS_Description__c</fullName>
    <description>Descrption</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>