force-app/main/default/objects/FS_Flavor_Change_Head__c/fields/FS_Email_Alerts_Needed__c.field-meta.xml
<CustomField>
    <fullName>FS_Email_Alerts_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Alerts Required</label>
    <type>Checkbox</type>
</CustomField>