force-app/main/default/objects/FS_Flavor_Change_Head__c/fields/FS_Entity_ACN__c.field-meta.xml
<CustomField>
    <fullName>FS_Entity_ACN__c</fullName>
    <description>Formula field to get the ACN of the account</description>
    <formula>FS_HQ_Chain__r.FS_ACN__c</formula>
    <label>Entity ACN</label>
    <type>Text</type>
</CustomField>