force-app/main/default/objects/FS_Flavor_Change_Head__c/fields/FS_Entity_Address__c.field-meta.xml
<CustomField>
    <fullName>FS_Entity_Address__c</fullName>
    <formula>FS_HQ_Chain__r.ShippingStreet &amp; &quot;,&quot;&amp; FS_HQ_Chain__r.ShippingCity &amp; &quot;,&quot; &amp; FS_HQ_Chain__r.ShippingState &amp; &quot;,&quot; &amp; FS_HQ_Chain__r.ShippingCountry &amp; &quot;,&quot; &amp; FS_HQ_Chain__r.ShippingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Entity Address</label>
    <type>Text</type>
</CustomField>