force-app/main/default/objects/FS_Flavor_Change_Head__c/fields/FS_Entity_Distributor_Address__c.field-meta.xml
<CustomField>
    <fullName>FS_Entity_Distributor_Address__c</fullName>
    <formula>FS_HQ_Chain__r.FS_Distributor_Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Entity Distributor Address</label>
    <type>Text</type>
</CustomField>