force-app/main/default/objects/FS_Flavor_Change_Head__c/fields/FS_Entity_Store__c.field-meta.xml
<CustomField>
    <fullName>FS_Entity_Store__c</fullName>
    <formula>FS_HQ_Chain__r.FS_Store_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Entity Store</label>
    <type>Text</type>
</CustomField>