force-app/main/default/objects/FS_Flavor_Change_Head__c/fields/FS_Estimated_FC_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_Estimated_FC_Date__c</fullName>
    <label>Estimated Flavor change Date</label>
    <type>Date</type>
</CustomField>