force-app/main/default/objects/FS_Flavor_Change_Head__c/fields/FS_FC_Type__c.field-meta.xml
<CustomField>
    <fullName>FS_FC_Type__c</fullName>
    <label>Flavor Change Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Workflow Flavor Change</fullName>
            </value>
            <value>
                <fullName>File Upload Flavor Change</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>