force-app/main/default/objects/FS_Flavor_Change_Head__c/fields/FS_Flavor_Change_Notes_Comments__c.field-meta.xml
<CustomField>
    <fullName>FS_Flavor_Change_Notes_Comments__c</fullName>
    <label>Flavor Change Notes/ Comments</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>