force-app/main/default/objects/FS_Flavor_Change_Head__c/fields/FS_Flavor_Change_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_Flavor_Change_Request_Date__c</fullName>
    <label>Flavor Change Request Date</label>
    <type>Date</type>
</CustomField>