force-app/main/default/objects/FS_Flavor_Change_Head__c/fields/FS_Flavor_Change_Status__c.field-meta.xml
<CustomField>
    <fullName>FS_Flavor_Change_Status__c</fullName>
    <label>Flavor Change Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Flavor_Change_Status</valueSetName>
    </valueSet>
</CustomField>