force-app/main/default/objects/FS_Flavor_Change_Head__c/fields/FS_Flavor_Change_Status_Modified_By__c.field-meta.xml
<CustomField>
    <fullName>FS_Flavor_Change_Status_Modified_By__c</fullName>
    <description>Flavor Change Status Modified By</description>
    <label>Flavor Change Status Modified By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>