force-app/main/default/objects/FS_Flavor_Change_Head__c/fields/FS_HQ_Chain__c.field-meta.xml
<CustomField>
    <fullName>FS_HQ_Chain__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Entity Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Flavor_Change_Heads</relationshipName>
    <type>Lookup</type>
</CustomField>