force-app/main/default/objects/FS_Flavor_Change_Head__c/fields/FS_installation__c.field-meta.xml
<CustomField>
    <fullName>FS_installation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Installation</label>
    <referenceTo>FS_Installation__c</referenceTo>
    <relationshipLabel>Flavor Change</relationshipLabel>
    <relationshipName>Flavor_Change_Install</relationshipName>
    <type>Lookup</type>
</CustomField>