force-app/main/default/objects/FS_Flavor_Change_Head__c/fields/FS_isBatch__c.field-meta.xml
<CustomField>
    <fullName>FS_isBatch__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox is internally used to differentiate the records created by batch process and manual. We have certain workflows to uncheck the checkbox once the batch operation is complete.</description>
    <label>FS isBatch</label>
    <type>Checkbox</type>
</CustomField>