force-app/main/default/objects/FS_Flavor_Change_Head__c/fields/FS_Level__c.field-meta.xml
<CustomField>
    <fullName>FS_Level__c</fullName>
    <formula>IF(AND(RecordType.Name=&#39;FS Flavor Change Chain HQ&#39;,FS_HQ_Chain__r.RecordType.Name=&#39;FS Chain&#39;),&#39;FS Chain&#39;,
IF(AND(RecordType.Name=&#39;FS Flavor Change Chain HQ&#39;,FS_HQ_Chain__r.RecordType.Name=&#39;FS Headquarters&#39;),&#39;FS Headquarters&#39;,
IF(RecordType.Name=&#39;FS Flavor Change Installation&#39;,&#39;FS Installation&#39;,
IF(RecordType.Name=&#39;FS Flavor Change Outlet&#39;,&#39;FS Outlet&#39;,&#39;&#39;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Level</label>
    <type>Text</type>
</CustomField>