force-app/main/default/objects/FS_Flavor_Change_Head__c/fields/FS_Local_Time__c.field-meta.xml
<CustomField>
    <fullName>FS_Local_Time__c</fullName>
    <description>User&#39;s Locale Time</description>
    <formula>LEFT(Text(NOW()),LEN(Text(NOW()))-1)</formula>
    <label>Local Time</label>
    <type>Text</type>
</CustomField>