force-app/main/default/objects/FS_Flavor_Change_Head__c/fields/FS_NDO_Action_Completed_by__c.field-meta.xml
<CustomField>
    <fullName>FS_NDO_Action_Completed_by__c</fullName>
    <label>NDO Approved/ Rejected By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>