force-app/main/default/objects/FS_Flavor_Change_Head__c/fields/FS_NDO_Approval__c.field-meta.xml
<CustomField>
    <fullName>FS_NDO_Approval__c</fullName>
    <label>NDO Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Changed to Direct Ship</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>