force-app/main/default/objects/FS_Flavor_Change_Head__c/fields/FS_NDO_Approval_Check__c.field-meta.xml
<CustomField>
    <fullName>FS_NDO_Approval_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <description>NDO Approval Check</description>
    <inlineHelpText>If distributor delivery method is selected, NDO must provide approval before you can proceed. A notification will be sent to NDO upon saving the record</inlineHelpText>
    <label>NDO Approval Check</label>
    <type>Checkbox</type>
</CustomField>