force-app/main/default/objects/FS_Flavor_Change_Head__c/fields/FS_NDO_Approval_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>FS_NDO_Approval_Date_Time__c</fullName>
    <description>NDO Approval Date/Time</description>
    <label>NDO Approved/ Rejected Date/ Time</label>
    <type>DateTime</type>
</CustomField>