force-app/main/default/objects/FS_Flavor_Change_Head__c/fields/FS_Order_Processed_By__c.field-meta.xml
<CustomField>
    <fullName>FS_Order_Processed_By__c</fullName>
    <label>Order Processed By</label>
    <length>80</length>
    <type>Text</type>
</CustomField>