force-app/main/default/objects/FS_Flavor_Change_Head__c/fields/FS_Outlet_Postal_ZIP__c.field-meta.xml
<CustomField>
    <fullName>FS_Outlet_Postal_ZIP__c</fullName>
    <formula>FS_HQ_Chain__r.ShippingPostalCode</formula>
    <label>Outlet Postal ZIP</label>
    <type>Text</type>
</CustomField>