force-app/main/default/objects/FS_Flavor_Change_Head__c/fields/FS_Parent_Flavor_Change__c.field-meta.xml
<CustomField>
    <fullName>FS_Parent_Flavor_Change__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Parent Flavor Change</description>
    <label>Parent Flavor Change</label>
    <referenceTo>FS_Flavor_Change_Head__c</referenceTo>
    <relationshipLabel>Flavor Change</relationshipLabel>
    <relationshipName>Parent_Flavor_Change</relationshipName>
    <type>Lookup</type>
</CustomField>