force-app/main/default/objects/FS_Flavor_Change_Head__c/fields/FS_Parent_Project_ID__c.field-meta.xml
<CustomField>
    <fullName>FS_Parent_Project_ID__c</fullName>
    <formula>FS_Parent_Flavor_Change__r.FS_Project_Id__c</formula>
    <label>Project ID</label>
    <type>Text</type>
</CustomField>