force-app/main/default/objects/FS_Flavor_Change_Head__c/fields/FS_Pay_Type__c.field-meta.xml
<CustomField>
    <fullName>FS_Pay_Type__c</fullName>
    <label>Customer/Account Pay</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Pay</fullName>
            </value>
            <value>
                <fullName>Account Pay</fullName>
            </value>
            <value>
                <fullName>N/A - Water Changes Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>