force-app/main/default/objects/FS_Flavor_Change_Head__c/fields/FS_PM__c.field-meta.xml
<CustomField>
    <fullName>FS_PM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PM user</description>
    <label>PM</label>
    <lookupFilter>
        <active>false</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>FS PM_P</value>
        </filterItems>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>FS Admin PM_P</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Flavor_Change2</relationshipName>
    <type>Lookup</type>
</CustomField>