force-app/main/default/objects/FS_Flavor_Change_Head__c/fields/FS_POM_Action_Complete__c.field-meta.xml
<CustomField>
    <fullName>FS_POM_Action_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>POM Action Complete</label>
    <type>Checkbox</type>
</CustomField>