force-app/main/default/objects/FS_Flavor_Change_Head__c/fields/FS_POM_Action_Complete_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>FS_POM_Action_Complete_Date_Time__c</fullName>
    <label>POM Action Complete Date and Time</label>
    <type>DateTime</type>
</CustomField>