force-app/main/default/objects/FS_Flavor_Change_Head__c/fields/FS_Product_Order_handled_By__c.field-meta.xml
<CustomField>
    <fullName>FS_Product_Order_handled_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Order handled By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Flavor_Change_Handled</relationshipName>
    <type>Lookup</type>
</CustomField>