force-app/main/default/objects/FS_Flavor_Change_Head__c/fields/FS_Product_Order_handled_By_txt__c.field-meta.xml
<CustomField>
    <fullName>FS_Product_Order_handled_By_txt__c</fullName>
    <inlineHelpText>Who will handle the first Flavor Change Order?</inlineHelpText>
    <label>Flavor Change Initial Order handled by?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bottler</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Distributor</fullName>
            </value>
            <value>
                <fullName>POM</fullName>
            </value>
            <value>
                <fullName>N/A - Water Changes Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>