force-app/main/default/objects/FS_Flavor_Change_Head__c/fields/FS_Project_Id__c.field-meta.xml
<CustomField>
    <fullName>FS_Project_Id__c</fullName>
    <description>Project-ID</description>
    <label>Project ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>