force-app/main/default/objects/FS_Flavor_Change_Head__c/fields/FS_Project_Name__c.field-meta.xml
<CustomField>
    <fullName>FS_Project_Name__c</fullName>
    <description>Project-Description</description>
    <label>Project Description</label>
    <length>257</length>
    <type>LongTextArea</type>
</CustomField>