force-app/main/default/objects/FS_Flavor_Change_Head__c/fields/FS_Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_Requested_Date__c</fullName>
    <inlineHelpText>Requested Date should be greater than the current date</inlineHelpText>
    <label>Requested Date</label>
    <type>Date</type>
</CustomField>