force-app/main/default/objects/FS_Flavor_Change_Head__c/fields/FS_Scheduled_Age__c.field-meta.xml
<CustomField>
    <fullName>FS_Scheduled_Age__c</fullName>
    <description>Field to calculate difference between today and scheduled date business days</description>
    <formula>CASE(MOD(TODAY()- DATE(1985,6,24),7),

0 , CASE( MOD( FS_SP_Scheduled_Date__c - TODAY(),7),1,2,2,3,3,4,4,5,5,5,6,5,1),
1 , CASE( MOD( FS_SP_Scheduled_Date__c - TODAY(),7),1,2,2,3,3,4,4,4,5,4,6,5,1),
2 , CASE( MOD( FS_SP_Scheduled_Date__c - TODAY(),7),1,2,2,3,3,3,4,3,5,4,6,5,1),
3 , CASE( MOD( FS_SP_Scheduled_Date__c - TODAY(),7),1,2,2,2,3,2,4,3,5,4,6,5,1),
4 , CASE( MOD( FS_SP_Scheduled_Date__c - TODAY(),7),1,1,2,1,3,2,4,3,5,4,6,5,1),
5 , CASE( MOD( FS_SP_Scheduled_Date__c - TODAY(),7),1,0,2,1,3,2,4,3,5,4,6,5,0),
6 , CASE( MOD( FS_SP_Scheduled_Date__c - TODAY(),7),1,1,2,2,3,3,4,4,5,5,6,5,0),
999)
+
(FLOOR(( FS_SP_Scheduled_Date__c - TODAY())/7)*5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scheduled Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>