force-app/main/default/objects/FS_Flavor_Change_Head__c/fields/FS_SP_Readiness_Completed_DateTime__c.field-meta.xml
<CustomField>
    <fullName>FS_SP_Readiness_Completed_DateTime__c</fullName>
    <label>SP Readiness Completed DateTime</label>
    <type>DateTime</type>
</CustomField>