force-app/main/default/objects/FS_Flavor_Change_Head__c/fields/FS_SP_Scheduled_Alert_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_SP_Scheduled_Alert_Date__c</fullName>
    <formula>CASE( 
MOD( (FS_SP_Scheduled_Date__c ) - DATE(1900, 1, 7), 7), 
0,(FS_SP_Scheduled_Date__c  - 5), 
5,(FS_SP_Scheduled_Date__c - 4),	
6,(FS_SP_Scheduled_Date__c  - 4), 
(FS_SP_Scheduled_Date__c - 6) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SP Scheduled Alert Date Alert</label>
    <type>Date</type>
</CustomField>