force-app/main/default/objects/FS_Flavor_Change_Head__c/fields/FS_SP_Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_SP_Scheduled_Date__c</fullName>
    <description>Service Provider Scheduled date field on Flavor change object</description>
    <label>Scheduled Date</label>
    <type>Date</type>
</CustomField>