force-app/main/default/objects/FS_Flavor_Change_Head__c/fields/FS_SS_Alert_Status__c.field-meta.xml
<CustomField>
    <fullName>FS_SS_Alert_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SS Alert Status</label>
    <type>Checkbox</type>
</CustomField>