force-app/main/default/objects/FS_Flavor_Change_Head__c/fields/FS_SS_Readiness_Alert__c.field-meta.xml
<CustomField>
    <fullName>FS_SS_Readiness_Alert__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used in the logic where we send home page alerts</description>
    <label>FS SS Readiness Alert</label>
    <type>Checkbox</type>
</CustomField>