force-app/main/default/objects/FS_Flavor_Change_Head__c/fields/Is_customer_switching_back_to_DirectShip__c.field-meta.xml
<CustomField>
    <fullName>Is_customer_switching_back_to_DirectShip__c</fullName>
    <description>in the Distributor delivered workflow, if NDO disapproves the request because distributor is not able to fulfill, and if the customer agrees to switch to direct ship, NDO will check a box called &#39;Is customer switching back to Direct Ship&#39;</description>
    <label>Customer switching to DirectShip?</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>FS_NDO_Approval__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Yes Ã¢â‚¬â€œ Cokesmart / Direct Ship</fullName>
            </value>
            <value>
                <fullName>Yes Ã¢â‚¬â€œ Manual Order / Direct Ship</fullName>
            </value>
            <value>
                <fullName>Yes Ã¢â‚¬â€œ Bottler Ordered / Direct Ship</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>