force-app/main/default/objects/FS_Flavor_Change_Head__c/fields/isWaterDasani__c.field-meta.xml
<CustomField>
    <fullName>isWaterDasani__c</fullName>
    <label>isWaterDasani</label>
    <summaryFilterItems>
        <field>FS_Flavor_Change_New__c.FS_Only_Water_Dasani__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>FS_Flavor_Change_New__c.FS_FC_Head__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>