force-app/main/default/objects/FS_Flavor_Change_Head__c/fields/Order_Processed_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Processed_Date__c</fullName>
    <label>Order Processed Date</label>
    <type>DateTime</type>
</CustomField>