force-app/main/default/objects/FS_Flavor_Change_Head__c/recordTypes/FS_Flavor_Change_Installation.recordType-meta.xml
<RecordType>
    <fullName>FS_Flavor_Change_Installation</fullName>
    <active>true</active>
    <label>FS Flavor Change Installation</label>
</RecordType>