force-app/main/default/objects/FS_Flavor_Change_Head__c/recordTypes/FS_FlavorChange_Chain_HQ.recordType-meta.xml
<RecordType>
    <fullName>FS_FlavorChange_Chain_HQ</fullName>
    <active>true</active>
    <label>FS Flavor Change Chain HQ</label>
</RecordType>