force-app/main/default/objects/FS_Flavor_Change_Head__c/recordTypes/FS_FlavorChange_Outlet.recordType-meta.xml
<RecordType>
    <fullName>FS_FlavorChange_Outlet</fullName>
    <active>true</active>
    <label>FS Flavor Change Outlet</label>
</RecordType>