force-app/main/default/objects/FS_Flavor_Change_Head__c/validationRules/Cant_change_FS_SP_go_out.validationRule-meta.xml
<ValidationRule>
    <fullName>Cant_change_FS_SP_go_out</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISCHANGED(FS_SP_go_out__c ), (ISPICKVAL(FS_Flavor_Change_Status__c , &#39;Cancelled&#39;)  ||ISPICKVAL(FS_Flavor_Change_Status__c , &#39;Complete&#39;) ))</errorConditionFormula>
    <errorMessage>Can not change &quot;Does SP needs to go out&quot; for &quot;Canceled&quot; or &quot;Completed&quot; Status</errorMessage>
</ValidationRule>