force-app/main/default/objects/FS_Flavor_Change_Head__c/validationRules/Cant_change_Pungent_change.validationRule-meta.xml
<ValidationRule>
    <fullName>Cant_change_Pungent_change</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISCHANGED( FS_Pungent_Change_Indicator__c ), (ISPICKVAL(FS_Flavor_Change_Status__c , &#39;Cancelled&#39;) ||ISPICKVAL(FS_Flavor_Change_Status__c , &#39;Complete&#39;) ))</errorConditionFormula>
    <errorMessage>Can not change &quot;Pungent Change Indicator&quot; for &quot;Canceled&quot; or &quot;Completed&quot; Status</errorMessage>
</ValidationRule>