force-app/main/default/objects/FS_Flavor_Change_Head__c/validationRules/Locking_Completed_FC.validationRule-meta.xml
<ValidationRule>
    <fullName>Locking_Completed_FC</fullName>
    <active>true</active>
    <description>It does not allow user to modify the status once it is cancelled or closed</description>
    <errorConditionFormula>OR(ISPICKVAL(PRIORVALUE(FS_Flavor_Change_Status__c),&#39;Complete&#39;),ISPICKVAL(PRIORVALUE(FS_Flavor_Change_Status__c),&#39;Cancelled&#39;))&amp;&amp; ISCHANGED(FS_Flavor_Change_Status__c)</errorConditionFormula>
    <errorMessage>Status for completed or cancelled records cannot be changed.</errorMessage>
</ValidationRule>