force-app/main/default/objects/FS_Flavor_Change_Head__c/validationRules/Locking_Record_Type_for_Profiles.validationRule-meta.xml
<ValidationRule>
    <fullName>Locking_Record_Type_for_Profiles</fullName>
    <active>true</active>
    <description>Locking_Record_Type_for_Profiles</description>
    <errorConditionFormula>AND(OR($Profile.Name=&#39;FS AC_P&#39;,$Profile.Name=&#39;FS PIC_P&#39;,$Profile.Name=&#39;FS PM_P&#39;),ISCHANGED( RecordTypeId))</errorConditionFormula>
    <errorMessage>This Profile has been restricted to change Record Type</errorMessage>
</ValidationRule>