force-app/main/default/objects/FS_Flavor_Change_Head__c/validationRules/Restrict_Customer_readiness_From_True_To.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Customer_readiness_From_True_To</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED( FS_Customer_Readiness__c ) &amp;&amp; 
(PRIORVALUE(FS_Customer_Readiness__c)=true)</errorConditionFormula>
    <errorDisplayField>FS_Customer_Readiness__c</errorDisplayField>
    <errorMessage>Customer Readiness cannot be unchecked.</errorMessage>
</ValidationRule>